Fix Alignment

--- a/src/app/components/wiki/figure/figure.component.scss
+++ b/src/app/components/wiki/figure/figure.component.scss
@@ -9,7 +9,7 @@
     position: relative;
     display: grid;
     gap: var(--spacing-2);
-    grid-template-columns: 20rem 2fr;
+    grid-template-columns: 25rem 2fr;
 
     @media only screen and (max-width: $breakpoint) {
         display: flex;
