--- a/src/app/components/wiki/person/cover/cover.component.scss
+++ b/src/app/components/wiki/person/cover/cover.component.scss
@@ -2,6 +2,8 @@
     display: flex;
     position: relative;
     border-radius: var(--spacing-2);
+    align-items: flex-end;
+    align-self: flex-start;
 }
 
 .cover-image {
